--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,9 @@
-- env merge
-- env -> var
+:Eternity2
 - clear cache
 - public cleanup
 - .keep
++ env merge
++ env -> var
++ virtualhost dev/prod
++ measure and cache middlewares
++ remotelog config
